@@ -360,8 +360,8 @@ if [ -f tomboy-ng-master.zip ]; then
 	    touch Qt5			# leave semaphore file
 	    scripts/mkcontrol.bash debian/ "$DISTRO1" qt5
 	    # we must force qt5 app to use qt5ct because of a bug in qt5.tsavedialog
-	    # note ugly syntax, qt5 strips it off (and anything after it) before app sees it. 
-	    sed -i "s/Exec=tomboy-ng %f/Exec=env QT_QPA_PLATFORMTHEME=qt5ct tomboy-ng %f/" "glyphs"/"$APP".desktop
+	    #sed -i "s/Exec=tomboy-ng %f/Exec=env QT_QPA_PLATFORMTHEME=qt5ct tomboy-ng %f/" "glyphs"/"$APP".desktop
+	    sed -i "s/Exec=tomboy-ng %f/Exec=QT_QPA_PLATFORMTHEME=qt5ct tomboy-ng %f/" "glyphs"/"$APP".desktop
 	else
 		scripts/mkcontrol.bash debian/ "$DISTRO1"
 	fi
