@@ -7,13 +7,13 @@ object MainForm: TMainForm
   Caption = 'tomboy-ng'
   ClientHeight = 294
   ClientWidth = 565
+  LCLVersion = '3.99.0.0'
   OnClose = FormClose
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
   OnResize = FormResize
   OnShow = FormShow
-  LCLVersion = '3.0.0.2'
   object ImageNotesDirTick: TImage
     AnchorSideTop.Control = LabelNotesFound
     Left = 24
@@ -356,8 +356,8 @@ object MainForm: TMainForm
       0000000000000000000000000000000000000000000000000000000000000000
       0000000000000000000000000000000000000000000000000000
     }
-    OnClick = ButtMenuClick
     TabOrder = 0
+    OnClick = ButtMenuClick
   end
   object LabelBadNoteAdvice: TLabel
     AnchorSideTop.Control = LabelError
@@ -384,8 +384,8 @@ object MainForm: TMainForm
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Right = 2
     Caption = 'Quit'
-    OnClick = BitBtnQuitClick
     TabOrder = 2
+    OnClick = BitBtnQuitClick
   end
   object BitBtnHide: TBitBtn
     AnchorSideLeft.Control = ButtMenu
@@ -399,8 +399,8 @@ object MainForm: TMainForm
     Width = 75
     Anchors = [akTop, akLeft, akBottom]
     Caption = 'Hide'
-    OnClick = BitBtnHideClick
     TabOrder = 1
+    OnClick = BitBtnHideClick
   end
   object ButtSysTrayHelp: TBitBtn
     AnchorSideLeft.Control = ImageAboutLaz
@@ -413,8 +413,8 @@ object MainForm: TMainForm
     Width = 219
     Anchors = [akTop]
     Caption = 'SysTray Help'
-    OnClick = ButtSysTrayHelpClick
     TabOrder = 4
+    OnClick = ButtSysTrayHelpClick
   end
   object ImageAboutLaz: TImage
     AnchorSideRight.Control = Owner
@@ -429,7 +429,6 @@ object MainForm: TMainForm
     AutoSize = True
     BorderSpacing.Right = 5
     BorderSpacing.Bottom = 5
-    OnClick = ImageAboutLazClick
     Picture.Data = {
       07545069786D617044DA00002F2A2058504D202A2F0A73746174696320636861
       72202A206C617A617275735F61626F75745F6C6F676F5F78706D5B5D203D207B
@@ -2179,6 +2178,7 @@ object MainForm: TMainForm
       2E202E202E202E202E202E202E202E202E202E202E202E202E202E202E202E20
       2E202E202E202E202E202E20227D3B0A
     }
+    OnClick = ImageAboutLazClick
   end
   object TrayIcon: TTrayIcon
     Icon.Data = {
@@ -2264,10 +2264,6 @@ object MainForm: TMainForm
     Hint = 'tomboy-ng'
     OnClick = TrayIconClick
     Left = 424
-    Top = 40
-  end
-  object ApplicationProperties1: TApplicationProperties
-    Left = 288
     Top = 40
   end
 end
