@@ -6,11 +6,11 @@ object FormSync: TFormSync
   Caption = 'Sync'
   ClientHeight = 418
   ClientWidth = 699
+  LCLVersion = '3.99.0.0'
   OnClose = FormClose
   OnCreate = FormCreate
   OnHide = FormHide
   OnShow = FormShow
-  LCLVersion = '3.0.0.2'
   object Panel1: TPanel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
