@@ -1,4 +1,12 @@
+Addition build targets, RasPi-amd64, Mac-amd64, i366-qt5, Qt6.
+Revised note dir selection.
+No left click on trayicon for KDE, wayland issue.
+Auto Sync now in background thread.
+Option to copy in plain text.
+Fix for Debian bug 1046360.
+Don't show trayicon until it has a menu item, fix Gnome 44 issue.
+Force Qt5 to use qt5ct because of upstream bad dialogs, Lazarus 3 will fix.
 Remove dangling anchors believed to cause a rare layout bug.
 Faster note loading for large notes.
 Qt5 can handle a request to use an unconfigured qt5ct.
-Dont show SysTray until menu items added.
+Do not show SysTray until menu items added.
